hierarchical tags working with hierarchical tags page
